2017-05-03  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.3 released.

2017-05-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.2 released.

2017-05-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.1 released.

2017-04-30  Carl Hetherington  <cth@carlh.net>

	* Try to improve hints when making a DCP which is not 24 or 48fps.

2017-04-27  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Stop master and server instances fighting over ports, allowing them to coexist (#962).

2017-04-26  Carl Hetherington  <cth@carlh.net>

	* Make a copy of the configuration, if it fails to load, before making new defaults.

2017-04-07  Carl Hetherington  <cth@carlh.net>

	* Make jump-to-content-start on selection in the content list
	optional.

2017-04-03  Carl Hetherington  <cth@carlh.net>

	* Confirm overwrite of existing DCPs when making a new one.

2017-03-07  Carl Hetherington  <cth@carlh.net>

	* Handle failure to write to cinemas file more nicely.

2017-03-03  Carl Hetherington  <cth@carlh.net>

	* Add option to write KDMs to separate folders
	or ZIP files.

2017-02-28  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2017-02-27  Carl Hetherington  <cth@carlh.net>

	* Updated zh_CN translation from 刘汉源.

2017-02-20  Carl Hetherington  <cth@carlh.net>

	* Add "Add DCP" button to the content panel.

2017-02-18  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2017-02-15  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2017-02-14  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2017-02-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.10.9 released.

2017-02-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.10.8 released.

2017-02-12  Carl Hetherington  <cth@carlh.net>

	* Use CPL's annotation text for ASSETMAP and PKL (#1048).
