@@ -40,6 +40,7 @@
 #include "wx/video_waveform_dialog.h"
 #include "wx/save_template_dialog.h"
 #include "wx/templates_dialog.h"
+#include "wx/nag_dialog.h"
 #include "lib/film.h"
 #include "lib/config.h"
 #include "lib/util.h"
@@ -596,6 +597,17 @@ private:
 			d->Destroy ();
 			return;
 		}
+
+		NagDialog::maybe_nag (
+			this,
+			Config::NAG_DKDM_CONFIG,
+			wxString::Format (
+				_("You are making a DKDM which is encrypted by a private key held in"
+				  "\n\n<tt>%s</tt>\n\nIt is <span weight=\"bold\" size=\"larger\">VITALLY IMPORTANT</span> "
+				  "that you <span weight=\"bold\" size=\"larger\">BACK UP THIS FILE</span> since if it is lost "
+				  "your DKDMs (and the DCPs they protect) will become useless."), std_to_wx(Config::config_path().string()).data()
+				)
+			);
 
 		optional<dcp::EncryptedKDM> kdm;
 		try {
