@@ -1,3 +1,7 @@
+2017-05-04  Carl Hetherington  <cth@carlh.net>
+
+	* Nag users to backup config.xml if they make a DKDM.
+
 2017-05-03  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.11.3 released.
